--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mui/lab": "6.0.0-beta.19",
     "@mui/material": "6.2.1",
     "@mui/material-nextjs": "6.2.1",
+    "@xyflow/react": "^12.0.0",
     "@prisma/client": "5.22.0",
     "@reduxjs/toolkit": "2.5.0",
     "@tanstack/match-sorter-utils": "8.19.4",
