--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@xyflow/react": "^12.8.0",
     "axios": "^1.6.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "@tanstack/react-query": "^5.8.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
