--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@mui/x-date-pickers": "^6.18.1",
     "@xyflow/react": "^12.8.0",
     "axios": "^1.6.2",
+    "date-fns": "^3.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "recharts": "^2.10.0",
     "@tanstack/react-query": "^5.8.4"
   },
   "devDependencies": {
